# rusty-hass-laptop

./: .gitlab-ci.yml  Cargo.toml  README.md  TODO.md
scripts/: rusty-hass-laptop.service
src/: hass.rs  lib.rs  main.rs
src/sensors/: battery.rs  cpu.rs  mod.rs
